--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "monolith-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed-admin": "node utils/seedAdmin.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
